// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`handleInit > clones the repository and updates project config -- uninstall git 1`] = `
[MockFunction log] {
  "calls": [
    [
      "Repository cloned successfully.",
    ],
    [
      "💬 Do you want to init git in your project?",
    ],
    [
      "💬 Git installation was skipped.",
    ],
    [
      "💬 Do you want to deploy your project?",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`handleInit > clones the repository and updates project config --install git 1`] = `
[MockFunction log] {
  "calls": [
    [
      "Repository cloned successfully.",
    ],
    [
      "💬 Do you want to init git in your project?",
    ],
    [
      "Git has been installed successfully.",
    ],
    [
      "💬 Do you want to deploy your project?",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
